# netplay-bracket-finder

./: README.md  index.html
.github/workflows/: build.yml  fetch.yml  release.yml
docs/: CNAME  elm.js  events.json  index.html  style.css
rust/: Cargo.toml
rust/src/: main.rs  query.graphql
src/: Main.elm
