[package]
name = "netplay-bracket-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "5.1.1", features = ["fancy"] }
thiserror = "1.0.31"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
ureq = { version = "2.5.0", features = ["json"] }
envy = "0.4.2"
